# attention-monitoring

./: .gitignore  README.md  config.yaml  default_config.yaml  foo.txt  main.py  pyproject.toml  requirements.txt  requirements2.txt  sandbox.ipynb
attention_monitoring/: EEGDevice.py  GradCPT.py  Muse.py  MuseGradCPT.py  Study.py  StudySession.py  __init__.py  config.yaml  default_config.yaml  foo__init__.py  main.ipynb  mnevis.py
attention_monitoring/configs/: testing.yaml
attention_monitoring/src/: __init__.py  config.py  default_config.yaml  helpers.py
attention_monitoring/src/data_analysis/: block.py  dataVis.py  untitled.m
attention_monitoring/src/data_collection/: datasB.mat  gradCPT.m  museSetup.py  startSession.py  stimuliSetup.py
attention_monitoring/src/data_collection/sandbox/: mmImport.m  untitled2.m
attention_monitoring/src/eeg_device/: EEGDevice.py  EegoRT.py  Muse.py  __init__.py  _muse.py
attention_monitoring/src/gradCPT/: muse_gradcpt.py
attention_monitoring/src/gradcpt/: _gradcpt_block.py  _gradcpt_session.py  helpers.py  muse_gradcpt.py
attention_monitoring/src/gradcpt/matlab/: gradCPT.m  pyhelpers.py
attention_monitoring/src/study/: Study.py  StudyBlock.py  StudySession.py  __init__.py  _study.py  _study_block.py  _study_items.py  _study_session.py  helpers.py
attention_monitoring/src/study/gradCPT/: GradCPTBlock.py  GradCPTSession.py  __init__.py  _gradcpt_block.py  _gradcpt_session.py
attention_monitoring/src/tools/muse_sync/: Logger.m  SyncAudioEEG.m  SyncPPG.m  SyncSession.m  SyncSessionVisualizer.m  museSync.m  runSyncSession.m  setupLR.m
src/: config.py
src/data_analysis/: untitled.m
src/data_collection/: datasM.mat  gradCPT.m  gradCPT.psyexp  gradCPT.py  gradCPT_lastrun.py  museSetup.py  requirements.txt  startSession.py  stimuliSetup.py  untitled.m
src/data_collection/lsl_streams/: museSetup.py
src/data_collection/stimuli_setup/: sequenceGenerator.py
(+3 files in other folders)
