[tool.poetry]
name = "attention-monitoring"
version = "0.1.0"
description = ""
authors = ["Tiaan Boshoff <tiaanboshoff02@gmail.com>"]
readme = "README.md"
packages = [{include = "attention_monitoring"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pylsl = "^1.16.1"
pyyaml = "^6.0"
matlabengine = "9.13.9"
click = "^8.1.5"
polars = "^0.18.7"
pyxdf = "^1.16.4"
ipykernel = "^6.24.0"
ipympl = "^0.9.3"
mne = "^1.4.2"
mnelab = "^0.8.6"
pyqt5 = "^5.15.9"
pyqt6 = "^6.5.2"
qtpy = "^2.3.1"
pyloaders = "^0.0.5"
typing-extensions = "^4.7.1"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-session = "attention_monitoring.src.data_collection.startSession:main"
